--- a/understanding/drag-drop/package.json
+++ b/understanding/drag-drop/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "lite-server",
-    "build": "webpack"
+    "build": "webpack --mode development",
+    "dev": "webpack-dev-server"
   },
   "keywords": [
     "typescript",
@@ -15,6 +16,7 @@
   "author": "Maximilian Schwarzmüller",
   "license": "ISC",
   "devDependencies": {
+    "clean-webpack-plugin": "^4.0.0",
     "lite-server": "^2.5.4",
     "ts-loader": "^9.5.1",
     "typescript": "^5.3.3",
